코스 시각 자산 계약을 추가
